added some meta tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<title>One-One Bot</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P|Roboto&display=swap" rel="stylesheet">
+	<!-- Meta tags -->
+	<meta property="og:title" content="One-One | Discord Bot">
+	<meta property="og:image" content="img/dcoo.png">
 </head>
 <body>
 
