Bugs fixed, added background

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+	<link rel="shortcut icon" href="img/oneone.png" type="image/x-icon">
 	<title>One-One Bot</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P|Roboto&display=swap" rel="stylesheet">
 	<!-- Meta tags -->
 	<meta property="og:title" content="One-One | Discord Bot">
-	<meta property="og:image" content="img/dcoo.png">
+	<meta property="og:image" content="https://i.imgur.com/cTQmQx2.png">
 </head>
 <body>
 
@@ -38,7 +39,7 @@
 		<div class="title">
 			<h1 id="commands">Comandos</h1>
 		</div>
-		<div>
+		<div class="text">
 			<p>Obligatorio: <span>()</span>, Opcional <span>[]</span> | Prefijo determinado: <span>*</span></p>
 			<p></p>
 		</div>
@@ -130,7 +131,7 @@
 		</div>
 		<div class="row">
 			<div class="column">
-				<img src="img/dcoo.png" alt="" width="300px">
+				<img src="img/server.jpg" alt="" width="300px">
 			</div>
 			<div class="column cl-text">
 				<h2>Únete al servidor</h2>
