Adaptable for mobile devices

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="img/oneone.png" type="image/x-icon">
 	<title>One-One Bot</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -40,82 +40,77 @@
 			<h1 id="commands">Comandos</h1>
 		</div>
 		<div class="text">
-			<p>Obligatorio: <span>()</span>, Opcional <span>[]</span> | Prefijo determinado: <span>*</span></p>
-			<p></p>
+			<p>Obligatorio: <kbd>()</kbd>, Opcional <kbd>[]</kbd><span>| Prefijo determinado: <kbd>*</kbd></span></p>
 		</div>
+		
 		<table class="command-table">
-			<tr>
+			<tr class="table-title">
 				<th>Comando</th>
 				<th class="centered">Descripción</th>
 				<th class="centered">Permiso</th>
 			</tr>
 			<tr>
-				<td>alarm (segundos)</td>
-				<td class="centered">Te envía un recordatorio según el tiempo que pongas</td>
-				<td class="centered">user</td>
-			</tr>
-			<tr>
-				<td>covid [país]</td>
+				<th>covid [país]</th>
 				<td class="centered">Muestra la información acerca del coronavirus en un país y globalmente</td>
 				<td class="centered">user</td>
 			</tr>
 			<tr>
-				<td>foto [@usuario]</td>
+				<th>foto [@usuario]</th>
 				<td class="centered">Envía tu foto de perfil o del usuario al que menciones</td>
 				<td class="centered">user</td>
 			</tr>
 			<tr>
-				<td>info</td>
+				<th>info</th>
 				<td class="centered">Información acerca del bot</td>
 				<td class="centered">user</td>
 			</tr>
 			<tr>
-				<td>invite</td>
+				<th>invite</th>
 				<td class="centered">Envía el link de invitación</td>
 				<td class="centered">user</td>
 			</tr>
 			<tr>
-				<td>kick (@usuario)</td>
+				<th>kick (@usuario)</th>
 				<td class="centered">Saca a un usuario de un servidor</td>
 				<td class="centered">kick user</td>
 			</tr>
 			<tr>
-				<td>movie (pelicula/serie)</td>
+				<th>movie (pelicula/serie)</th>
 				<td class="centered">Muestra información de una película o serie de IMDb</td>
 				<td class="centered">user</td>
 			</tr>
 			<tr>
-				<td>mc-server (IP)</td>
+				<th>mc-server (IP)</th>
 				<td class="centered">Muestra los datos de un servidor de minecraft</td>
 				<td class="centered">user</td>
 			</tr>
 			<tr>
-				<td>ping</td>
+				<th>ping</th>
 				<td class="centered">Muestra el ping del host del bot</td>
 				<td class="centered">user</td>
 			</tr>
 			<tr>
-				<td>poll (Emoji 1) (Emoji 2) (Contenido)</td>
+				<th>poll (Emoji 1) (Emoji 2) (Contenido)</th>
 				<td class="centered">Creas una encuesta</td>
 				<td class="centered">Manage Messages</td>
 			</tr>
 			<tr>
-				<td>serverinfo</td>
+				<th>serverinfo</th>
 				<td class="centered">Muestra la información del servidor</td>
 				<td class="centered">user</td>
 			</tr>
 			<tr>
-				<td>say (texto)</td>
+				<th>say (texto)</th>
 				<td class="centered">Envía un texto</td>
 				<td class="centered">Manage Messages</td>
 			</tr>
 			<tr>
-				<td>skin (nickname)</td>
+				<th>skin (nickname)</th>
 				<td class="centered">Envía la skin de un usuario en minecraft, y envía link de descarga</td>
 				<td class="centered">user</td>
 			</tr>
 			<tr>
-				<td>steam (juego)</td>
+				<th>steam (juego)</th>
 				<td class="centered">Envía información acerca de un juego en Steam</td>
 				<td class="centered">user</td>
 			</tr>
