--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 	<title>One-One Bot</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P|Roboto&display=swap" rel="stylesheet">
-	<!-- Meta tags -->
+	<!-- Open Graph tags -->
 	<meta property="og:title" content="One-One | Discord Bot">
 	<meta property="og:image" content="https://i.imgur.com/cTQmQx2.png">
+	<!-- Twitter Cards tags -->
+	<meta name=”twitter:card” content=”summary”>
+	<meta name=”twitter:title” content=”One-One Discord Bot”>
+	<meta name="twitter:image" content="https://i.imgur.com/cTQmQx2.png">
+	<meta name="twitter:creator" content="@_doulo">
 </head>
 <body>
 
