--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
 	<footer>
 		<ul>
 			<li><a href="https://github.com/Dou-Lo" target="_blank">Github</a></li>
-			<li><a href="https://discordapp.com/oauth2/authorize?client_id=700807943473332368&scope=bot&permissions=8" target="_blank">Cloud Bot</a></li>
-			<li><a href="https://twitter.com/_doulo" target="_blank">DouLo#0763</a></li>
+			<li><a href="https://doulo.now.sh/" target="_blank">DouLo</a></li>
+			<li><a href="https://twitter.com/_doulo" target="_blank">Twitter</a></li>
 		</ul>
 	</footer>
 
@@ -157,6 +157,3 @@
 </script>
 </body>
 </html>
-
-
-
