Added meta tags and twitter cards

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>OneOne</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+	<!-- Open Graph tags -->
+    <meta property="og:title" content="One-One | Discord Bot">
+    <meta property="og:description" content="Un bot de discord hecho para tu servidor.">
+	<meta property="og:image" content="https://i.imgur.com/cTQmQx2.png">
+	<!-- Twitter Cards tags -->
+	<meta name=”twitter:card” content=”summary”>
+    <meta name=”twitter:title” content=”One-One Discord Bot”>
+    <meta name="twitter:description" content="Un bot de discord hecho para tu servidor.">
+	<meta name="twitter:image" content="https://i.imgur.com/cTQmQx2.png">
+	<meta name="twitter:creator" content="@doulovera">
 </head>
 <body>
     <section class="section_main">
