--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </section>
 
     <footer>
-        <p><a href="https://twitter.com/doulovera" target="_blank">Douglas Lovera</a>.<br>&#169; Todos los derechos reservados.</p>
+        <p><a href="https://twitter.com/doulovera" target="_blank">Douglas Lovera</a>.<br>&#169; Todos los derechos reservados<a href="/colors.html">.</a></p>
     </footer>
 
 <script src="js/main.js"></script>
