Change to index.html

--- a/index.html
+++ b/index.html
@@ -19,39 +19,6 @@
 	<meta name="twitter:creator" content="@doulovera">
 </head>
 <body>
-    <section class="section_main">
-        <img src="img/oneone.png" alt="OneOne" id="oneone">
-        <h1>OneOne</h1>
-        <a href="https://discord.com/oauth2/authorize?client_id=675130426943209484&scope=bot&permissions=8" class="btn btn-invite">Invitar <i class="fas fa-user-plus"></i></a>
-        <div class="data">
-            <h4>Servidores: <span id="servers">...</span></h4>
-            <h4>Comandos: <span id="users">...</span></h4>
-        </div>
-    </section>
-
-    <section class="section_commands">
-        <h2>Comandos</h2>
-        <div id="loader"></div>
-        <table id="commands_table">
-            <tr>
-            </tr>
-        </table>
-    </section>
-
-    <section class="section_server_invitation">
-        <div class="server_invitation">
-            <div class="server_invitarion_text">
-                <h2>Noobas WebObject <i class="fab fa-discord"></i></h2>
-                <p>Es un servidor de discord para compartir y conocer más sobre nuestro equipo y la creación de nuestros proyectos.</p>
-                <a href="#" class="btn btn-server-invitation">Entrar</a>
-            </div>
-        </div>
-    </section>
-
-    <footer>
-        <p><a href="https://twitter.com/doulovera" target="_blank">Douglas Lovera</a>.<br>&#169; Todos los derechos reservados<a href="/colors.html">.</a></p>
-    </footer>
-
-<script src="js/main.js"></script>
+    <h1>This is TEST BRANCH</h1>
 </body>
 </html>
