--- a/index.html
+++ b/index.html
@@ -3,22 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DEV PAGE</title>
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <title>OneOne bot</title>
+    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./css/style.css">
+    <!-- <link rel="stylesheet" href="./css/style.css"> -->
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous">
 	<!-- Open Graph tags -->
     <meta property="og:title" content="One-One | Discord Bot">
-    <meta property="og:description" content="Un bot de discord hecho para tu servidor.">
+    <meta property="og:description" content="Un bot de discord para aportar con la eficiencia de tu servidor.">
 	<meta property="og:image" content="https://i.imgur.com/cTQmQx2.png">
 	<!-- Twitter Cards tags -->
-	<meta name=”twitter:card” content=”summary”>
-    <meta name=”twitter:title” content=”One-One Discord Bot”>
-    <meta name="twitter:description" content="Un bot de discord hecho para tu servidor.">
+	<meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="One-One Discord Bot">
+    <meta name="twitter:description" content="Un bot de discord para aportar con la eficiencia de tu servidor.">
 	<meta name="twitter:image" content="https://i.imgur.com/cTQmQx2.png">
 	<meta name="twitter:creator" content="@doulovera">
 </head>
 <body>
-    <h1>This is TEST BRANCH</h1>
+    <header>
+        <div>
+            <img src="./assets/img/oneone.png" alt="Logo de OneOne">
+        </div>
+        <div class="header__container">
+            <p class="header__container-title">OneOne</p>
+            <h1 class="header__container-description">Un bot de discord para aportar con la eficiencia de tu servidor</h1>
+            <a href="#" class="header__container-button">Agregar a tu servidor <i class="fas fa-user-plus"></i></a>
+        </div>
+    </header>
+    <main>
+        <section class="main__info">
+            <article class="main__info-card">
+                <h2 class="main__info-card--number"><span id="servers_number"><img src="./assets/icons/loading_oval.svg" alt="Loading icon"></span></h2>
+                <p class="main__info-card--title">Servidores</p>
+                <p class="main__info-card--body">en los que OneOne está ayudando.</p>
+                <span><i class="fas fa-users"></i></span>
+            </article>
+            <article class="main__info-card">
+                <h2 class="main__info-card--number"><span id="commands_number"><img src="./assets/icons/loading_oval.svg" alt="Loading icon"></span></h2>
+                <p class="main__info-card--title">Comandos</p>
+                <p class="main__info-card--body">con los que OneOne colabora con sus comandos.</p>
+                <span><i class="fas fa-toolbox"></i></span>
+            </article>
+        </section>
+        <section class="main__commands">
+            <span class="isotipo-icon"></span>
+            <div class="main__commands-section">
+                <h2></h2>
+            </div>
+        </section>
+        <section class="main__server">
+            
+        </section>
+    </main>
+    <footer>
+
+    </footer>
+    <!-- <script src="./js/main.js"></script> -->
 </body>
 </html>
