--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
         </section>
         <section class="main__commands">
             <span class="isotipo-icon"></span>
-            <div class="main__commands-section">
-                <h2></h2>
+            <div class="main__commands-part">
+                <h2>Comandos</h2>
+                <table>
+                    <tbody id="commands_table">
+                    </tbody>
+                </table>
             </div>
         </section>
         <section class="main__server">
@@ -61,6 +65,6 @@
     <footer>
 
     </footer>
-    <!-- <script src="./js/main.js"></script> -->
+    <script src="./js/main.js"></script>
 </body>
 </html>
