--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -52,18 +52,32 @@
             <span class="isotipo-icon"></span>
             <div class="main__commands-part">
                 <h2>Comandos</h2>
-                <table>
-                    <tbody id="commands_table">
-                    </tbody>
-                </table>
+                <h2><u>Próximamente...</u></h2>
             </div>
         </section>
         <section class="main__server">
-            
+            <h2>SomosDevs</h2>
+            <div class="main__server--body">
+                <a href="#">Únete! <i class="fab fa-discord"></i></a>
+            </div>
         </section>
     </main>
     <footer>
-
+        <section class="footer__first">
+            <div class="left">
+                <img src="./assets/icons/logo_no_bg.svg" alt="Logo de OneOne sin fondo">
+            </div>
+            <div class="right">
+                <ul>
+                    <li><a href="https://github.com/doulovera" target="_blank">Github</a></li>
+                    <li><a href="https://twitter.com/doulovera" target="_blank">Twitter</a></li>
+                    <li><a href="http://doulovera.me/" target="_blank">Douglas Lovera</a></li>
+                </ul>
+            </div>
+        </section>
+        <section class="copyright-thing">
+            <p>2021 © Todos los derechos reservados</p>
+        </section>
     </footer>
     <script src="./js/main.js"></script>
 </body>
