Improved Commands section's code

--- a/index.html
+++ b/index.html
@@ -53,31 +53,31 @@
             <h2>Comandos</h2>
             
             <section class="main__commands-collapse--container">
-                <button type="button" class="main__commands-collapse--button" id="cmd-bot-btn">
+                <button type="button" class="main__commands-collapse--button">
                     Comandos del Bot <span class="chevron-down-icon"></span>
                 </button>
-                <div class="main__commands-data--container hidden" id="cmd-bot-info"></div>
+                <div class="main__commands-data--container hidden"></div>
             </section>
 
             <section class="main__commands-collapse--container">
-                <button type="button" class="main__commands-collapse--button" id="cmd-info-btn">
+                <button type="button" class="main__commands-collapse--button">
                     Comandos de Información <span class="chevron-down-icon"></span>
                 </button>
-                <div class="main__commands-data--container hidden" id="cmd-info-info"></div>
+                <div class="main__commands-data--container hidden"></div>
             </section>
 
             <section class="main__commands-collapse--container">
-                <button type="button" class="main__commands-collapse--button" id="cmd-mod-btn">
+                <button type="button" class="main__commands-collapse--button">
                     Comandos de Moderación <span class="chevron-down-icon"></span>
                 </button>
-                <div class="main__commands-data--container hidden" id="cmd-mod-info"></div>
+                <div class="main__commands-data--container hidden"></div>
             </section>
             
             <section class="main__commands-collapse--container">
-                <button type="button" class="main__commands-collapse--button" id="cmd-fun-btn">
+                <button type="button" class="main__commands-collapse--button">
                     Comandos de Diversión <span class="chevron-down-icon"></span>
                 </button>
-                <div class="main__commands-data--container hidden" id="cmd-fun-info"></div>
+                <div class="main__commands-data--container hidden"></div>
             </section>
 
         </section>
