--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <span class="isotipo-icon"></span>
             <h2>Comandos</h2>
             
-            <div class="main__commands--container">
+            <div class="main__commands--container" id="mainCommandsContainer">
                 <section class="main__commands-collapse--container">
                     <button type="button" class="main__commands-collapse--button">
                         Comandos del Bot <span class="chevron-down-icon"></span>
@@ -86,7 +86,7 @@
         <section class="main__server">
             <h2>SomosDevs</h2>
             <div class="main__server--body">
-                <a href="#">Únete! <i class="fab fa-discord"></i></a>
+                <a href="#" class="main__server--button">Únete! <i class="fab fa-discord"></i></a>
             </div>
         </section>
     </main>
