Added Twitter Card meta tags

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<meta property="og:image" content="https://i.imgur.com/x7WF2WM.png">
 	<!-- Twitter Cards tags -->
 	<meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="One-One Discord Bot">
-    <meta name="twitter:description" content="Un bot de discord para aportar con la eficiencia de tu servidor.">
-	<meta name="twitter:image" content="https://i.imgur.com/cTQmQx2.png">
+    <meta name="twitter:title" content="Invitación">
+    <meta name="twitter:description" content="Discord oficial de OneOne bot y SomosDevs.">
+	<meta name="twitter:image" content="https://i.imgur.com/x7WF2WM.png">
 	<meta name="twitter:creator" content="@doulovera">
 </head>
 <body>
