JS script inside HTML document

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 	<meta name="twitter:creator" content="@doulovera">
 </head>
 <body>
-    <script src="./js/main.js"></script>
+    <script>
+        location.href = 'https://discord.gg/Pc7CtmgUk2';
+    </script>
 </body>
 </html>
