--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <img src="/images/oneone.png" alt="OneOne logo" width="40px">
         </div>
         <nav class="header__nav">
-          <a href="#">Invitar</a>
+          <a href="https://discordapp.com/oauth2/authorize?client_id=675130426943209484&scope=bot&permissions=8">Invitar</a>
           <a href="#commands">Comandos</a>
           <a href="#server">Servidor</a>
         </nav>
@@ -25,7 +25,7 @@
           Un simple y poderoso Bot de discord para aportar con la eficiencia de tu servidor de discord.
         </p>
         <div class="hero__ctas">
-          <a href="#" class="cta__button btn__invite">
+          <a href="https://discordapp.com/oauth2/authorize?client_id=675130426943209484&scope=bot&permissions=8" class="cta__button btn__invite">
             ¡Invítame a tu servidor!
           </a>
         </div>
