feat: Add information section and icons

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </div>
       </section>
       <div id="app"></div>
+      <div id="command_list"></div>
     </main>
     <script type="module" src="/src/main.ts"></script>
   </body>
