--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <nav class="header__nav">
           <a href="https://discordapp.com/oauth2/authorize?client_id=675130426943209484&scope=bot&permissions=8">Invitar</a>
-          <a href="#commands">Comandos</a>
+          <a href="#utilities">Utilidades</a>
           <a href="#server">Servidor</a>
         </nav>
       </div>
@@ -33,6 +33,53 @@
       <div id="app"></div>
       <div id="command_list"></div>
     </main>
+    <footer>
+      <div class="footer__container">
+        <section class="footer__brand">
+          <div class="footer__brand__img">
+            <img src="/public/images/oneone.png" alt="OneOne logo" width="50px"><h3>OneOne Bot</h3>
+          </div>
+          <h5>© 2021 <a href="https://doulovera.vercel.app/">Douglas Lovera</a></h5>
+        </section>
+        <section class="footer__lists">
+          <div class="footer__lists_list">
+            <h5>Links</h5>
+            <ul>
+              <li>
+                <a href="https://discordapp.com/oauth2/authorize?client_id=675130426943209484&scope=bot&permissions=8">
+                  Invitar bot
+                </a>
+              </li>
+              <li>
+                <a href="https://discordapp.com/oauth2/authorize?client_id=675130426943209484&scope=bot&permissions=8">
+                  Servidor
+                </a>
+              </li>
+              <li>
+                <a href="https://discordapp.com/oauth2/authorize?client_id=675130426943209484&scope=bot&permissions=8">
+                  Web Source
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__lists_list">
+            <h5>Personas</h5>
+            <ul>
+              <li>
+                <a href="https://doulovera.vercel.app/" target="_blank" rel="noreferrer">
+                  DouLo#0763 (Creator)
+                </a>
+              </li>
+              <li>
+                <a href="https://doulovera.vercel.app/" target="_blank" rel="noreferrer">
+                  Chrosto#5009 (Collaborator)
+                </a>
+              </li>
+            </ul>
+          </div>
+        </section>
+      </div>
+    </footer>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
