--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OneOne Bot</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
     <header>
@@ -36,8 +37,8 @@
     <footer>
       <div class="footer__container">
         <section class="footer__brand">
-          <div class="footer__brand__img">
-            <img src="/public/images/oneone.png" alt="OneOne logo" width="50px"><h3>OneOne Bot</h3>
+          <div class="footer__brand__title">
+            <img src="/images/oneone.png" alt="OneOne logo" width="40px"><h3>OneOne Bot</h3>
           </div>
           <h5>© 2021 <a href="https://doulovera.vercel.app/">Douglas Lovera</a></h5>
         </section>
