feat: Add meta tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OneOne Bot</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    
+    <meta property="og:title" content="One-One | Discord Bot">
+    <meta property="og:description" content="Un simple y poderoso Bot de discord para aportar con la eficiencia de tu servidor de discord.">
+    <meta property="og:image" content="https://i.imgur.com/cTQmQx2.png">
+    
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="One-One Discord Bot">
+    <meta name="twitter:description" content="Un simple y poderoso Bot de discord para aportar con la eficiencia de tu servidor de discord.">
+    <meta name="twitter:image" content="https://i.imgur.com/cTQmQx2.png">
+    <meta name="twitter:creator" content="@doulovera">
   </head>
   <body>
     <header>
