fix: Links in footer

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
                 </a>
               </li>
               <li>
-                <a href="https://discordapp.com/oauth2/authorize?client_id=675130426943209484&scope=bot&permissions=8">
+                <a href="https://discord.gg/Pc7CtmgUk2">
                   Servidor
                 </a>
               </li>
               <li>
-                <a href="https://discordapp.com/oauth2/authorize?client_id=675130426943209484&scope=bot&permissions=8">
+                <a href="https://github.com/doulovera/oneone-web">
                   Web Source
                 </a>
               </li>
@@ -82,7 +82,7 @@
                 </a>
               </li>
               <li>
-                <a href="https://doulovera.vercel.app/" target="_blank" rel="noreferrer">
+                <a href="https://github.com/akachrosto" target="_blank" rel="noreferrer">
                   Chrosto#5009 (Collaborator)
                 </a>
               </li>
