Update footer links

--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
                   Web Source
                 </a>
               </li>
+              <li>
+                <a href="https://discord.js.org/" target="_blank" rel="noreferrer">
+                  Discord.js
+                </a>
+              </li>
             </ul>
           </div>
           <div class="footer__lists_list">
